@@ -4,6 +4,7 @@
 - Improved: [#25719] The weather change dropdown now shows icons next to the weather types for easier selection.
 - Improved: [#25765] The ‘View options’ and ‘Special track elements’ dropdowns no longer need click-and-hold.
 - Improved: [#25858] macOS now supports the onboarding menu.
+- Improved: [#25882] Maze construction now auto-removes trees.
 - Change: [#25018] Add upkeep cost to booster pieces.
 - Fix: [#3788] Self-intersecting track designs cannot be placed.
 - Fix: [#4643, #25167] Many metal supports draw with a filled in top when they didn't in vanilla, causing some slight misalignment and glitching.
@@ -19,7 +20,7 @@
 - Fix: [#25850] Ride nausea generation is different compared to vanilla.
 - Fix: [#25854] When a guest is at 0 happiness or energy, the game draws too big of a bar in the guest stats window.
 - Fix: [#25862] Diagonal and inclined brakes are not counted when calculating upkeep cost.
-- Fix: [#25873] Repainting a banner in OpenRCT2-specific colours results in an error message.
+- Fix: [#25873] Repainting a banner in OpenRCT2-specific colours results in an error message. 
 
 0.4.30 (2026-01-04)
 ------------------------------------------------------------------------
